New product added

--- a/index.html
+++ b/index.html
@@ -1,106 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Innovative Problem Solutions | Straight Cargo System</title>
-    <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-101490775-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-</head>
-
-<body>
-    <section class="navigation">
-        <div class="nav-container">
-            <div class="brand"><a href="index.html">Innovative Problem Solutions</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Innovative Problem Solutions | Straight Cargo System</title>
+        <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
+        <link rel="stylesheet" href="assets/css/normalize.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-101490775-1', 'auto');
+        ga('send', 'pageview');
+        </script>
+    </head>
+    <body>
+        <section class="navigation">
+            <div class="nav-container">
+                <div class="brand"><a href="index.html">Innovative Problem Solutions</a>
             </div>
             <nav>
                 <div class="nav-mobile">
                     <a href="#" id="nav-toggle"><span></span></a>
                 </div>
                 <ul class="nav-list">
-                    <li><a id="dropdown-link" href="#">Products</a>
-                        <ul class="nav-dropdown">
-                            <li><a href="product_scs_700.html">SCS 700</a></li>
-                            <li><a href="product_scs_800.html">SCS 800</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+                    <li><a href="#">Products</a>
+                    <ul class="nav-dropdown">
+                        <li><a href="product_scs_700.html">SCS 700</a></li>
+                        <li><a href="product_scs_700IM.html">SCS 700IM</a></li>
+                        <li><a href="product_scs_800.html">SCS 800</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
+<section id="landing-area-container" class="landing-area-container">
+    <div class="wrap text-center">
+        <div class="row top-row">
+            <div class="col-md-4 col-sm-4"><img src="assets/media/green_unstable_updated.png" alt="green car crossed out with unstable cargo"></div>
+            <div class="col-md-4 col-sm-4"><a class="landing-area-brand" href="#products">
+                <div>
+                <h1>Innovative Problem Solutions, LLC <br> <i id="arrow" class="icon-down-big"></i></h1></div>
+            </a></div>
+            <div class="col-md-4 col-sm-4"><img src="assets/media/red_unstable_updated.png" alt="red car crossed out with unstable cargo"></div>
         </div>
-    </section>
-    <section id="landing-area-container" class="landing-area-container">
-        <div class="wrap text-center">
-            <div class="row top-row">
-                <div class="col-md-4 col-sm-4"><img src="assets/media/green_unstable_updated.png" alt="green car crossed out with unstable cargo"></div>
-                <div class="col-md-4 col-sm-4"><a class="landing-area-brand" href="#products">
-                        <div>
-                            <h1>Innovative Problem Solutions, LLC <br> <i id="arrow" class="icon-down-big"></i></h1></div>
-                    </a></div>
-                <div class="col-md-4 col-sm-4"><img src="assets/media/red_unstable_updated.png" alt="red car crossed out with unstable cargo"></div>
-            </div>
-            <div class="row bot-row">
-                <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable_updated.png" alt="green car with stable cargo"></div>
-
-                <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable_updated.png" alt="red car with stable cargo"></div>
-            </div>
+        <div class="row bot-row">
+            <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable_updated.png" alt="green car with stable cargo"></div>
+            <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable_updated.png" alt="red car with stable cargo"></div>
         </div>
-        <div class="mobile-wrap text-center">
-            <div class="row">
-                <div class="col-xs-12"><img src="assets/media/mobile_icon_1.png"></div>
-            </div>
-            <div class="row">
-                <a class="landing-area-brand" href="#products">
-                    <div class="col-xs-12 v-center">
-                        <h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div>
-                </a>
-            </div>
-            <div class="row">
-                <div class="col-xs-12"><img src="assets/media/mobile_icon_2.png"></div>
-            </div>
+    </div>
+    <div class="mobile-wrap text-center">
+        <div class="row">
+            <div class="col-xs-12"><img src="assets/media/mobile_icon_1.png"></div>
         </div>
-    </section>
-    <section id="products">
-        <div>
-            <h2 class="text-center underline">Product Showcase</h2>
+        <div class="row">
+            <a class="landing-area-brand" href="#products">
+                <div class="col-xs-12 v-center">
+                <h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div>
+            </a>
         </div>
-
-        <div class="product-container">
-            <div class="product">
-                <img src="assets/media/IPSCS0700.gif" alt="gif explaining Straight Cargo System 700">
-                <div class="text-center">
-                    <h3 class="text-center">Straight Cargo System 700</h3>
-                    <p class="text-left">The Straight Cargo System 700 is a vehicle cargo carrier that provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping a cargo rack from shifting and tilting.</p>
-                    <a class="learn-more-btn" href="product_scs_700.html">Learn More</a>
-                </div>
-            </div>
-            <div class="product">
-                <img src="assets/media/IPSCS0800.gif" alt="gif explaining Straight Cargo System 800">
-                <div class="text-center">
-                    <h3 class="text-center">Straight Cargo System 800</h3>
-                    <p class="text-left">Problems with an unbalanced cargo basket? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
-                    <a class="learn-more-btn" href="product_scs_800.html">Learn More</a>
-                </div>
+        <div class="row">
+            <div class="col-xs-12"><img src="assets/media/mobile_icon_2.png"></div>
+        </div>
+    </div>
+</section>
+<section id="products">
+    <div>
+        <h2 class="text-center underline">Product Showcase</h2>
+    </div>
+    <div class="product-container">
+        <div class="product">
+            <img src="assets/media/IPSCS0700.gif" alt="gif explaining Straight Cargo System 700">
+            <div class="text-center">
+                <h3 class="text-center">Straight Cargo System 700</h3>
+                <p class="text-left">The Straight Cargo System 700 is a vehicle cargo carrier that provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping a cargo rack from shifting and tilting.</p>
+                <a class="learn-more-btn" href="product_scs_700.html">Learn More</a>
             </div>
         </div>
-    </section>
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/main.js"></script>
+        <div class="product">
+            <img src="assets/media/IPSCS0800.gif" alt="gif explaining Straight Cargo System 800">
+            <div class="text-center">
+                <h3 class="text-center">Straight Cargo System 800</h3>
+                <p class="text-left">Problems with an unbalanced cargo basket? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
+                <a class="learn-more-btn" href="product_scs_800.html">Learn More</a>
+            </div>
+        </div>
+        <div class="product">
+            <img src="assets/media/IPSCS0700IM_Static.jpg" alt="The Straight Cargo System 700IM">
+            <div class="text-center">
+                <h3 class="text-center">Straight Cargo System 700IM</h3>
+                <p class="text-left">This model is similar to the 700 model but with a slightly different fit. The Straight Cargo System 700IM provides bottom support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
+                <a class="learn-more-btn" href="product_scs_800.html">Learn More</a>
+            </div>
+        </div>
+    </div>
+</section>
+<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="assets/js/navbar.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
-
 </html>
