--- a/product_scs_700.html
+++ b/product_scs_700.html
@@ -9,14 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
         <link rel="stylesheet" href="assets/css/style.css">
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-101490775-1', 'auto');
-          ga('send', 'pageview');
-
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-101490775-1', 'auto');
+        ga('send', 'pageview');
         </script>
     </head>
     <body>
@@ -32,6 +30,7 @@
                     <li><a href="#">Products</a>
                     <ul class="nav-dropdown">
                         <li><a href="product_scs_700.html">SCS 700</a></li>
+                        <li><a href="product_scs_700IM.html">SCS 700IM</a></li>
                         <li><a href="product_scs_800.html">SCS 800</a></li>
                     </ul>
                 </li>
@@ -47,7 +46,7 @@
         but don't worry, you can <a href="assets/media/IPSCS0700_ Annimation_ RevA2.mp4">download it</a>
         and watch it with your favorite video player!
     </video>
-    <p class="text-left">If your vehicle cargo keeps tilting and shifting, the Straight Cargo System is perfect for you. The Straight Cargo System 700 provides bottom support for cargo carriers. The 700 model is used for cars lacking enough bumper space for the 800. The Straight Cargo System is perfect for ramp applications and is an innovative solution to unbalanced cargo. It can be useful for all types of  cargo carriers such as luggage baskets, wheelchair cargo carriers, receiver hitch cargo carriers, ATV and dirt bike carriers. In addition, this cargo carrier attachment can be useful for folding carriers, utility carriers, hunting gear carriers, outdoorsman carriers and camping gear carriers. If you have any form of trailer, cart or cargo carrier odds are the Straight Cargo System will be useful.</p>
+    <p class="text-left">If your vehicle cargo keeps tilting and shifting, the Straight Cargo System is perfect for you. The Straight Cargo System 700 provides bottom support for cargo carriers. The 700 model is used for cars lacking enough bumper space for the 800. The Straight Cargo System is perfect for ramp applications and is an innovative solution to unbalanced cargo. It can be useful for all types of cargo carriers such as luggage baskets, wheelchair cargo carriers, receiver hitch cargo carriers, ATV and dirt bike carriers. In addition, this cargo carrier attachment can be useful for folding carriers, utility carriers, hunting gear carriers, outdoorsman carriers and camping gear carriers. If you have any form of trailer, cart or cargo carrier odds are the Straight Cargo System will be useful.</p>
     <div class="download-container">
         <a class="buy-btn" href="http://www.ebay.com/itm/CARGO-CARRIER-STRAIGHT-CARGO-SYSTEM-/322507099536?hash=item4b16ebcd90:g:D7sAAOSwnONZDPnR&vxp=mtr" target="_blank">Buy On Ebay</a>
         <br>
@@ -57,7 +56,6 @@
         <a class="learn-more-btn" href="assets/media/Warranty_StraightCargoSystem.pdf" download="Warranty_StraightCargoSystem.pdf">Download Warranty</a>
     </div>
 </section>
-
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/navbar.js"></script>
 <script src="assets/js/main.js"></script>
