--- a/product_scs_700IM.html
+++ b/product_scs_700IM.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Innovative Problem Solutions | Contact</title>
+        <title>Innovative Problem Solutions | Straight Cargo System 700</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Contact Innovative Problem Solutions.">
+        <meta name="description" content="The Straight Cargo System 700 provides bottom support to unstable cargo. Perfect for keeping cargo from sliding.">
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
         <link rel="stylesheet" href="assets/css/style.css">
@@ -39,37 +39,21 @@
         </nav>
     </div>
 </section>
-<section id="contact">
-    <div class="contact-container">
-        <div class="form-container">
-            <form data-parsley-validate id="form1" action="https://formspree.io/customerservice@ips-llc.net"
-                method="POST">
-                <div class="text-center thick-border dept-choice">
-                    <p>Please choose a dept:</p>
-                    <select name="dept" id="dept" size="1">
-                        <option value="dept_Customer_Service">Customer Service</option>
-                        <option value="dept_Sales">Sales</option>
-                    </select>
-                </div>
-                <div>
-                    <input data-parsley-error-message="Please enter your name." data-parsley-required class="thick-border" type="text" name="name" placeholder="Name">
-                </div>
-                <div>
-                    <input data-parsley-error-message="Please enter a valid email." data-parsley-required class="thick-border" type="email" name="_replyto" placeholder="Email">
-                </div>
-                <div>
-                    <textarea data-parsley-error-message="Please enter a message." data-parsley-required class="thick-border" name="message" cols="30" rows="10" placeholder="Message"></textarea>
-                </div>
-                <div class="text-center">
-                    <button class="submit-btn" type="submit" value="Send">Submit</button>
-                </div>
-            </form>
-        </div>
-        
+<section class="content text-center">
+    <h1>Straight Cargo System 700IM</h1>
+    <div>
+        <img src="assets/media/IPSCS0700IM_Static.jpg" alt="The straight cargo system 700IM">
+    </div>
+    
+    <p class="text-left">If your vehicle cargo keeps tilting and shifting, the Straight Cargo System is perfect for you. The Straight Cargo System 700IM provides bottom support for cargo carriers. Similar to the 700 model, the 700IM model also provides bottom support but with a slightly different fit. The 700IM model is used for cars lacking enough bumper space for the 800. The Straight Cargo System is perfect for ramp applications and is an innovative solution to unbalanced cargo. It can be useful for all types of cargo carriers such as luggage baskets, wheelchair cargo carriers, receiver hitch cargo carriers, ATV and dirt bike carriers. In addition, this cargo carrier attachment can be useful for folding carriers, utility carriers, hunting gear carriers, outdoorsman carriers and camping gear carriers. If you have any form of trailer, cart or cargo carrier odds are the Straight Cargo System will be useful.</p>
+    <div class="download-container">
+        <a class="buy-btn" href="http://www.ebay.com/itm/CARGO-CARRIER-STRAIGHT-CARGO-SYSTEM-/322507099536?hash=item4b16ebcd90:g:D7sAAOSwnONZDPnR&vxp=mtr" target="_blank">Buy On Ebay</a>
+        <br>
+        <a class="learn-more-btn" href="assets/media/Instructions_IPSCS0700IM.pdf" download="Instructions_IPSCS0700IM.pdf">Download Instructions</a>
+        <br>
     </div>
 </section>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/parsley.min.js"></script>
 <script src="assets/js/navbar.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
