--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -9,14 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
         <link rel="stylesheet" href="assets/css/style.css">
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-101490775-1', 'auto');
-          ga('send', 'pageview');
-
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-101490775-1', 'auto');
+        ga('send', 'pageview');
         </script>
     </head>
     <body>
@@ -32,6 +30,7 @@
                     <li><a href="#">Products</a>
                     <ul class="nav-dropdown">
                         <li><a href="product_scs_700.html">SCS 700</a></li>
+                        <li><a href="product_scs_700IM.html">SCS 700IM</a></li>
                         <li><a href="product_scs_800.html">SCS 800</a></li>
                     </ul>
                 </li>
@@ -40,7 +39,6 @@
         </nav>
     </div>
 </section>
-
 <section class="content text-center">
     <h1>Straight Cargo System 800</h1>
     <video controls src="assets/media/IPSCS0800_Annimation_RevA2.mp4" autoplay poster="posterimage.jpg">
@@ -49,7 +47,7 @@
         and watch it with your favorite video player!
     </video>
     <p class="text-left">The Straight Cargo System 800 is a perfect solution for unbalanced cargo. Unlike the 700 model, it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great for ramp applications and is an innovative solution to unstable cargo carriers. It can be useful for all types of  cargo carriers such as luggage baskets, wheelchair cargo carriers, receiver hitch cargo carriers, ATV and dirt bike carriers. In addition, this cargo carrier attachment can be useful for folding carriers, utility carriers, hunting gear carriers, outdoorsman carriers and camping gear carriers. If you have any form of trailer, cart or cargo carrier odds are the Straight Cargo System will be useful.
-</p>
+    </p>
     <div class="download-container">
         <a class="buy-btn" href="http://www.ebay.com/itm/Accessory-for-CARGO-CARRIERS-/322507087638?hash=item4b16eb9f16:g:70sAAOSwtGlZDRQQ&vxp=mtr" target="_blank">Buy On Ebay</a>
         <br>
