--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="mobile-wrap text-center">
         <div class="row">
-            <div class="col-xs-12"><img src="assets/media/mobile_icon_1.png"></div>
+            <div class="col-xs-12"><img src="assets/media/mobile_icon_1.1.png"></div>
         </div>
         <div class="row">
             <a class="landing-area-brand" href="#products">
@@ -66,7 +66,7 @@
             </a>
         </div>
         <div class="row">
-            <div class="col-xs-12"><img src="assets/media/mobile_icon_2.png"></div>
+            <div class="col-xs-12"><img src="assets/media/mobile_icon_2.1.png"></div>
         </div>
     </div>
 </section>
