Fixed link in index

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="text-center">
                 <h3 class="text-center">Straight Cargo System 700IM</h3>
                 <p class="text-left">This model is similar to the 700 model but with a slightly different fit. The Straight Cargo System 700IM provides bottom support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
-                <a class="learn-more-btn" href="product_scs_800.html">Learn More</a>
+                <a class="learn-more-btn" href="product_scs_700IM.html">Learn More</a>
             </div>
         </div>
     </div>
