Stopped page from recentering on nav dropdown click

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#" id="nav-toggle"><span></span></a>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="#">Products</a>
+                    <li><a class="prevent-default" href="#">Products</a>
                     <ul class="nav-dropdown">
                         <li><a href="product_scs_700.html">SCS 700</a></li>
                         <li><a href="product_scs_700IM.html">SCS 700IM</a></li>
