Partial webpack support added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Innovative Problem Solutions | Straight Cargo System</title>
         <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
-        <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
-        <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -101,8 +99,6 @@
         </div>
     </div>
 </section>
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/navbar.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
