Image Gallery added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li><a href="product_scs_800.html">SCS 800</a></li>
                     </ul>
                 </li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -41,21 +42,21 @@
 <section id="landing-area-container" class="landing-area-container">
     <div class="wrap text-center">
         <div class="row top-row">
-            <div class="col-md-4 col-sm-4"><img src="assets/media/green_unstable_updated.png" alt="green car crossed out with unstable cargo"></div>
+            <div class="col-md-4 col-sm-4"><img src="dist/green_unstable_updated.png" alt="green car crossed out with unstable cargo"></div>
             <div class="col-md-4 col-sm-4"><a class="landing-area-brand" href="#products">
                 <div>
                 <h1>Innovative Problem Solutions, LLC <br> <i id="arrow" class="icon-down-big"></i></h1></div>
             </a></div>
-            <div class="col-md-4 col-sm-4"><img src="assets/media/red_unstable_updated.png" alt="red car crossed out with unstable cargo"></div>
+            <div class="col-md-4 col-sm-4"><img src="dist/red_unstable_updated.png" alt="red car crossed out with unstable cargo"></div>
         </div>
         <div class="row bot-row">
-            <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable_updated.png" alt="green car with stable cargo"></div>
-            <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable_updated.png" alt="red car with stable cargo"></div>
+            <div class="col-md-6 col-sm-6"><img src="dist/green_stable_updated.png" alt="green car with stable cargo"></div>
+            <div class="col-md-6 col-sm-6"><img src="dist/red_stable_updated.png" alt="red car with stable cargo"></div>
         </div>
     </div>
     <div class="mobile-wrap text-center">
         <div class="row">
-            <div class="col-xs-12"><img src="assets/media/mobile_icon_1.1.png"></div>
+            <div class="col-xs-12"><img src="dist/mobile_icon_1.1.png"></div>
         </div>
         <div class="row">
             <a class="landing-area-brand" href="#products">
@@ -64,7 +65,7 @@
             </a>
         </div>
         <div class="row">
-            <div class="col-xs-12"><img src="assets/media/mobile_icon_2.1.png"></div>
+            <div class="col-xs-12"><img src="dist/mobile_icon_2.1.png"></div>
         </div>
     </div>
 </section>
@@ -74,7 +75,7 @@
     </div>
     <div class="product-container">
         <div class="product">
-            <img src="assets/media/IPSCS0700.gif" alt="gif explaining Straight Cargo System 700">
+            <img src="dist/IPSCS0700.gif" alt="gif explaining Straight Cargo System 700">
             <div class="text-center">
                 <h3 class="text-center">Straight Cargo System 700</h3>
                 <p class="text-left">The Straight Cargo System 700 is a vehicle cargo carrier that provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping a cargo rack from shifting and tilting.</p>
@@ -82,7 +83,7 @@
             </div>
         </div>
         <div class="product">
-            <img src="assets/media/IPSCS0800.gif" alt="gif explaining Straight Cargo System 800">
+            <img src="dist/IPSCS0800.gif" alt="gif explaining Straight Cargo System 800">
             <div class="text-center">
                 <h3 class="text-center">Straight Cargo System 800</h3>
                 <p class="text-left">Problems with an unbalanced cargo basket? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
@@ -90,7 +91,7 @@
             </div>
         </div>
         <div class="product">
-            <img src="assets/media/IPSCS0700IM_Static.jpg" alt="The Straight Cargo System 700IM">
+            <img src="dist/IPSCS0700IM_Static.jpg" alt="The Straight Cargo System 700IM">
             <div class="text-center">
                 <h3 class="text-center">Straight Cargo System 700IM</h3>
                 <p class="text-left">This model is similar to the 700 model but with a slightly different fit. The Straight Cargo System 700IM provides bottom support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
