--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Innovative Problem Solutions | Contact</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Contact Innovative Problem Solutions.">
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
-        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Innovative Problem Solutions | Straight Cargo System</title>
+        <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
+        <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,6 +33,7 @@
                         <li><a href="product_scs_800.html">SCS 800</a></li>
                     </ul>
                 </li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -68,9 +68,6 @@
         
     </div>
 </section>
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/parsley.min.js"></script>
-<script src="assets/js/navbar.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
