--- a/product_scs_700IM.html
+++ b/product_scs_700IM.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Innovative Problem Solutions | Straight Cargo System 700</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="The Straight Cargo System 700 provides bottom support to unstable cargo. Perfect for keeping cargo from sliding.">
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
-        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Innovative Problem Solutions | Straight Cargo System</title>
+        <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
+        <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,6 +33,7 @@
                         <li><a href="product_scs_800.html">SCS 800</a></li>
                     </ul>
                 </li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -42,19 +42,17 @@
 <section class="content text-center">
     <h1>Straight Cargo System 700IM</h1>
     <div>
-        <img src="assets/media/IPSCS0700IM_Static.jpg" alt="The straight cargo system 700IM">
+        <img src="dist/IPSCS0700IM_Static.jpg" alt="The straight cargo system 700IM">
     </div>
     
     <p class="text-left">If your vehicle cargo keeps tilting and shifting, the Straight Cargo System is perfect for you. The Straight Cargo System 700IM provides bottom support for cargo carriers. Similar to the 700 model, the 700IM model also provides bottom support but with a slightly different fit. The 700IM model is used for cars lacking enough bumper space for the 800. The Straight Cargo System is perfect for ramp applications and is an innovative solution to unbalanced cargo. It can be useful for all types of cargo carriers such as luggage baskets, wheelchair cargo carriers, receiver hitch cargo carriers, ATV and dirt bike carriers. In addition, this cargo carrier attachment can be useful for folding carriers, utility carriers, hunting gear carriers, outdoorsman carriers and camping gear carriers. If you have any form of trailer, cart or cargo carrier odds are the Straight Cargo System will be useful.</p>
     <div class="download-container">
         <a class="buy-btn" href="http://www.ebay.com/itm/CARGO-CARRIER-STRAIGHT-CARGO-SYSTEM-/322507099536?hash=item4b16ebcd90:g:D7sAAOSwnONZDPnR&vxp=mtr" target="_blank">Buy On Ebay</a>
         <br>
-        <a class="learn-more-btn" href="assets/media/Instructions_IPSCS0700IM.pdf" download="Instructions_IPSCS0700IM.pdf">Download Instructions</a>
+        <a class="learn-more-btn" href="dist/Instructions_IPSCS0700IM.pdf" download="Instructions_IPSCS0700IM.pdf">Download Instructions</a>
         <br>
     </div>
 </section>
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/navbar.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
