--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Innovative Problem Solutions | Straight Cargo System 800</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="The Straight Cargo System 800 provides top support to unstable cargo. Perfect for keeping cargo from sliding.">
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
-        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Innovative Problem Solutions | Straight Cargo System</title>
+        <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
+        <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,6 +33,7 @@
                         <li><a href="product_scs_800.html">SCS 800</a></li>
                     </ul>
                 </li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -41,9 +41,9 @@
 </section>
 <section class="content text-center">
     <h1>Straight Cargo System 800</h1>
-    <video controls src="assets/media/IPSCS0800_Annimation_RevA2.mp4" autoplay poster="posterimage.jpg">
+    <video controls src="dist/IPSCS0800_Annimation_RevA2.mp4" autoplay poster="posterimage.jpg">
         Sorry, your browser doesn't support embedded videos,
-        but don't worry, you can <a href="assets/media/IPSCS0800_Annimation_RevA2.mp4">download it</a>
+        but don't worry, you can <a href="dist/IPSCS0800_Annimation_RevA2.mp4">download it</a>
         and watch it with your favorite video player!
     </video>
     <p class="text-left">The Straight Cargo System 800 is a perfect solution for unbalanced cargo. Unlike the 700 model, it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great for ramp applications and is an innovative solution to unstable cargo carriers. It can be useful for all types of  cargo carriers such as luggage baskets, wheelchair cargo carriers, receiver hitch cargo carriers, ATV and dirt bike carriers. In addition, this cargo carrier attachment can be useful for folding carriers, utility carriers, hunting gear carriers, outdoorsman carriers and camping gear carriers. If you have any form of trailer, cart or cargo carrier odds are the Straight Cargo System will be useful.
@@ -51,15 +51,13 @@
     <div class="download-container">
         <a class="buy-btn" href="http://www.ebay.com/itm/Accessory-for-CARGO-CARRIERS-/322507087638?hash=item4b16eb9f16:g:70sAAOSwtGlZDRQQ&vxp=mtr" target="_blank">Buy On Ebay</a>
         <br>
-        <a class="learn-more-btn" href="assets/media/Instructions_IPSCS0800RC.pdf" download="Instructions_IPSCS0800.pdf">Download Instructions</a>
+        <a class="learn-more-btn" href="dist/Instructions_IPSCS0800RC.pdf" download="Instructions_IPSCS0800.pdf">Download Instructions</a>
         <br>
-        <a class="learn-more-btn" href="assets/media/Application_IPSCS0800R.pdf" download="Guidelines_IPSCS0800.pdf">Download Guidelines</a>
-        <a class="learn-more-btn" href="assets/media/Warranty_StraightCargoSystem.pdf" download="Warranty_StraightCargoSystem.pdf">Download Warranty</a>
+        <a class="learn-more-btn" href="dist/Application_IPSCS0800R.pdf" download="Guidelines_IPSCS0800.pdf">Download Guidelines</a>
+        <a class="learn-more-btn" href="dist/Warranty_StraightCargoSystem.pdf" download="Warranty_StraightCargoSystem.pdf">Download Warranty</a>
     </div>
     
 </section>
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/navbar.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
