Fixed some img links

--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="product">
-            <img src="dist/IPSCS0800 AD.GIF" alt="IPSCS0800 AD gif">
+            <img src="dist/IPSCS0800 AD.gif" alt="IPSCS0800 AD gif">
             <div class="text-center">
                 <h3>IPSCS0800 AD</h3>
             </div>
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="product">
-            <img src="dist/IPSCS0800.GIF" alt="IPSCS0800 gif">
+            <img src="dist/IPSCS0800.gif" alt="IPSCS0800 gif">
             <div class="text-center">
                 <h3>
                 IPSCS0800
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="product">
-            <img src="dist/IPSCSO700 AD2.GIF" alt="IPSCSO700 AD2 gif">
+            <img src="dist/IPSCSO700 AD2.gif" alt="IPSCSO700 AD2 gif">
             <div class="text-center">
                 <h3>IPSCSO700 AD2</h3>
             </div>
