--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
         <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
+        <link rel="stylesheet" href="dist/styles.css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
